<?xml version="1.0"?>
<package format="2">
  <name>turtlebotwrapper</name>
  <version>0.0.0</version>
  <description>The turtlebotwrapper package provides interface to a planner working without knowledge of ROS</description>

  <maintainer email="rkhardon@iu.edu">Roni Khardon</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/turtlewrapper</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>turtlesim</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>turtlesim</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
  
</package>
